--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,175 +1,98 @@
+@import url('../../.cache/wal/colors-waybar.css');
+
 * {
-  border: none;
-  border-radius: 0px;
-  font-family: "FiraCode";
-  font-weight: bold;
-  font-size: 12px;
-  min-height: 10px;
+    font-size:11px;
+    font-family: "FiraCode","CodeNewRoman Nerd Font Propo", "Font Awesome 6 Free Solid", "Font Awesome 6 Free Regular", "Font Awesome 6 Brands Regular", "Symbols Nerd Font Mono", "Symbols Nerd Font";
+    font-weight: bold;
+	transition: all 0.5s ease;
 }
-
-@import "theme.css";
-
-window#waybar {
-  background: @bar-bg;
+window#waybar{
+    all: unset;
 }
-
+.modules-left {
+    margin: 5px 0px 2px 10px;
+}
+.modules-center {
+    margin: 5px 0px 2px 0px;
+}
+.modules-right {
+    margin: 5px 10px 2px 0px;
+}
 tooltip {
-  background: @main-bg;
-  color: @main-fg;
-  border-radius: 7px;
-  border-width: 0px;
+    background: @background;
+    border: 1px solid alpha(@color1, 0.8);
+    color: @foreground;
+}
+#clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover,#pulseaudio:hover,#hyprland-language:hover, #mpris:hover, #custom-control-center:hover, #custom-pacman:hover, #tray:hover label {
+    color: @color2;
+}
+
+.modules-right .module, .modules-left .module, .modules-center .module {
+    padding: 0px 10px;
+    color: @foreground;
+}
+
+#mpris, #clock, #workspaces, #tray, #perf, #configs, #custom-control-center, #custom-pacman, #privacy, #battery {
+    color: @foreground;
+	padding: 5px 15px;
+	margin: 0px 2px;
+	border-radius: 4px;
+    background: alpha(@background, .8);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .85);
+	border: solid 1px alpha(@foreground, 0.3);
+}
+
+#privacy {
+	color: @foreground;
+}
+
+#tray, #perf, #configs {
+	padding: 5px;
+}
+
+#workspaces {
+	margin-left: 0px;
+}
+#misc {
+	margin-right: 0px;
 }
 
 #workspaces button {
-  box-shadow: none;
-  text-shadow: none;
-  padding: 0px;
-  border-radius: 9px;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  margin-left: 0px;
-  padding-left: 3px;
-  padding-right: 3px;
-  margin-right: 0px;
-  color: @main-fg;
-  animation: ws_normal 20s ease-in-out 1;
+    all: unset;
+    padding: 0px 10px;
+}
+#workspaces button label {
+    color: alpha(@foreground, 0.5);
+	font-weight: 600;
+}
+#workspaces button:hover label {
+    color: alpha(@foreground, 0.85);
+}
+#workspaces button.active label {
+    color: alpha(@foreground, 1.0);
+	font-weight: 900;
 }
 
-#workspaces button.active {
-  background: @wb-act-bg;
-  color: @wb-act-fg;
-  margin-left: 3px;
-  padding-left: 12px;
-  padding-right: 12px;
-  margin-right: 3px;
-  animation: ws_active 20s ease-in-out 1;
-  transition: all 0.4s cubic-bezier(.55, -0.68, .48, 1.682);
+#tray #tray { /* Inner tray element. We don't want to style this.*/
+	background-color: transparent;
+	padding: 0px 5px 0px 0px;
+    box-shadow: none;
+	border: none;
 }
-
-#workspaces button:hover {
-  background: @wb-hvr-bg;
-  color: @wb-hvr-fg;
-  animation: ws_hover 20s ease-in-out 1;
-  transition: all 0.3s cubic-bezier(.55, -0.68, .48, 1.682);
+#tray menu {
+	background-color: alpha(@background, 0.9);
+	border: solid 1px alpha(@color1, 0.8);
 }
-
-#taskbar button {
-  box-shadow: none;
-  text-shadow: none;
-  padding: 0px;
-  border-radius: 9px;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  margin-left: 0px;
-  padding-left: 3px;
-  padding-right: 3px;
-  margin-right: 0px;
-  color: @wb-color;
-  animation: tb_normal 20s ease-in-out 1;
-}
-
-#taskbar button.active {
-  background: @wb-act-bg;
-  color: @wb-act-color;
-  margin-left: 3px;
-  padding-left: 12px;
-  padding-right: 12px;
-  margin-right: 3px;
-  animation: tb_active 20s ease-in-out 1;
-  transition: all 0.4s cubic-bezier(.55, -0.68, .48, 1.682);
-}
-
-#taskbar button:hover {
-  background: @wb-hvr-bg;
-  color: @wb-hvr-color;
-  animation: tb_hover 20s ease-in-out 1;
-  transition: all 0.3s cubic-bezier(.55, -0.68, .48, 1.682);
-}
-
-#tray menu * {
-  min-height: 16px
-}
-
 #tray menu separator {
-  min-height: 10px
+	background-color: alpha(@color1, 0.8);
+}
+#tray menu label {
+	color: @foreground;
+}
+#tray menu menuitem:hover {
+	background-color: @foreground;
+}
+#tray menu menuitem:hover label {
+	color: @background;
 }
 
-#backlight,
-#battery,
-#bluetooth,
-#custom-cliphist,
-#clock,
-#custom-cpuinfo,
-#cpu,
-#custom-gpuinfo,
-#idle_inhibitor,
-#custom-keybindhint,
-#language,
-#memory,
-#mpris,
-#network,
-#custom-notifications,
-#custom-power,
-#pulseaudio,
-#custom-spotify,
-#taskbar,
-#custom-theme,
-#tray,
-#custom-updates,
-#custom-wallchange,
-#custom-wbar,
-#window,
-#workspaces,
-#custom-l_end,
-#custom-r_end,
-#custom-sl_end,
-#custom-sr_end,
-#custom-rl_end,
-#custom-rr_end {
-  color: @main-fg;
-  opacity: 1;
-  margin: 4px 0px 4px 0px;
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-#workspaces,
-#taskbar {
-  padding: 0px;
-}
-
-#custom-r_end {
-  border-radius: 0px 21px 21px 0px;
-  margin-right: 9px;
-  padding-right: 3px;
-}
-
-#custom-l_end {
-  border-radius: 21px 0px 0px 21px;
-  margin-left: 9px;
-  padding-left: 3px;
-}
-
-#custom-sr_end {
-  border-radius: 0px;
-  margin-right: 9px;
-  padding-right: 3px;
-}
-
-#custom-sl_end {
-  border-radius: 0px;
-  margin-left: 9px;
-  padding-left: 3px;
-}
-
-#custom-rr_end {
-  border-radius: 0px 7px 7px 0px;
-  margin-right: 9px;
-  padding-right: 3px;
-}
-
-#custom-rl_end {
-  border-radius: 7px 0px 0px 7px;
-  margin-left: 9px;
-  padding-left: 3px;
-}
